--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
     "chess.js": "^1.0.0-beta.7",
     "react": "18.2.0",
     "react-native": "0.73.1",
     "react-native-flipper": "^0.212.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
     "react-native-sound": "^0.11.2",
-    "redux": "^4.2.1",
+    "react-redux": "^9.0.4",
+    "redux": "^5",
     "redux-flipper": "^2.0.2"
   },
   "devDependencies": {
