--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
@@ -22,7 +23,8 @@
     "react-native-sound": "^0.11.2",
     "react-redux": "^9.0.4",
     "redux": "^5",
-    "redux-flipper": "^2.0.2"
+    "redux-flipper": "^2.0.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
