--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "ChessMelodies",
-  "displayName": "ChessMelodies"
+  "name": "ChessOpeningTrainer",
+  "displayName": "ChessOpeningTrainer"
 }
