--- a/ios/ChessOpeningTrainer.xcodeproj/xcshareddata/xcschemes/ChessOpeningTrainer.xcscheme
+++ b/ios/ChessOpeningTrainer.xcodeproj/xcshareddata/xcschemes/ChessOpeningTrainer.xcscheme
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
-   version = "1.3">
+   LastUpgradeVersion = "1510"
+   version = "2.2">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <AutocreatedTestPlanReference>
+            </AutocreatedTestPlanReference>
+         </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
@@ -15,9 +24,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ChessMelodies.app"
-               BlueprintName = "ChessMelodies"
-               ReferencedContainer = "container:ChessMelodies.xcodeproj">
+               BuildableName = "ChessOpeningTrainer.app"
+               BlueprintName = "ChessOpeningTrainer"
+               ReferencedContainer = "container:ChessOpeningTrainer.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,16 +35,17 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ChessMelodiesTests.xctest"
-               BlueprintName = "ChessMelodiesTests"
-               ReferencedContainer = "container:ChessMelodies.xcodeproj">
+               BuildableName = "ChessOpeningTrainerTests.xctest"
+               BlueprintName = "ChessOpeningTrainerTests"
+               ReferencedContainer = "container:ChessOpeningTrainer.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +65,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ChessMelodies.app"
-            BlueprintName = "ChessMelodies"
-            ReferencedContainer = "container:ChessMelodies.xcodeproj">
+            BuildableName = "ChessOpeningTrainer.app"
+            BlueprintName = "ChessOpeningTrainer"
+            ReferencedContainer = "container:ChessOpeningTrainer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +82,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ChessMelodies.app"
-            BlueprintName = "ChessMelodies"
-            ReferencedContainer = "container:ChessMelodies.xcodeproj">
+            BuildableName = "ChessOpeningTrainer.app"
+            BlueprintName = "ChessOpeningTrainer"
+            ReferencedContainer = "container:ChessOpeningTrainer.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
