--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ChessMelodies",
-  "version": "0.0.1",
+  "name": "ChessOpeningTrainer",
+  "version": "0.5.7",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -22,6 +22,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-sound": "^0.11.2",
+    "react-native-typewriter": "^0.7.0",
     "react-redux": "^9.0.4",
     "redux": "^5",
     "redux-flipper": "^2.0.2",
