--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "chess.js": "^1.0.0-beta.7",
     "react": "18.2.0",
     "react-native": "0.73.1",
-    "react-native-flipper": "^0.212.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-sound": "^0.11.2",
@@ -26,7 +25,8 @@
     "react-redux": "^9.0.4",
     "redux": "^5",
     "redux-flipper": "^2.0.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-native-flipper": "^0.212.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
