--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chess.js": "^1.0.0-beta.7",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-flipper": "^0.212.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-sound": "^0.11.2",
@@ -26,7 +27,7 @@
     "redux": "^5",
     "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0",
-    "react-native-flipper": "^0.212.0"
+    "reselect": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
