--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChessOpeningTrainer",
+  "name": "chessopeningtrainer",
   "version": "0.6.0",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "web": "react-scripts start",
     "test": "jest"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "chess.js": "^1.0.0-beta.7",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.1",
     "react-native-flipper": "^0.212.0",
     "react-native-safe-area-context": "^4.8.2",
@@ -24,29 +26,44 @@
     "react-native-sound": "^0.11.2",
     "react-native-typewriter": "^0.7.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.22.3",
     "redux": "^5",
-    "redux-flipper": "^2.0.2",
+    "redux-flipper": "^2.0.3",
     "redux-persist": "^6.0.0",
     "reselect": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.18",
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
-    "@react-native/typescript-config": "^0.73.1",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "react-native-web": "^0.19.10",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "18.2.0"
   },
   "engines": {
     "node": ">=18"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "overrides": {
+    "react-refresh": "0.11.0"
   }
 }
